# fly.io-rust

./: .gitignore  README.md  flake.nix
broadcast/: Cargo.toml
broadcast/src/: main.rs
echo/: Cargo.toml
echo/src/: main.rs
g-counter/: Cargo.toml
g-counter/src/: main.rs
kafka-style-log/: Cargo.toml
kafka-style-log/src/: main.rs
uuid/: Cargo.toml
uuid/src/: main.rs
