[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22", features = ["serde", "std"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
simple_logger = { version = "5.0.0", features = ["stderr"] }
uuid = { version = "1.10.0", features = ["fast-rng", "serde", "v4"] }
